Added group_vars/all folder to ansible folder.  Also added config and secrets file.
Added secrets file .gitignore

Cleaned up .gitignore

Aesthetic clean of:
ansible/site.yml
ansible-docker/defaults/main.yml
ansible-docker/tasks/DebianTasks.yml
ansible-docker/vars/DebianVars.yml
datacenter/kafka/docker-compose.yml

Removed following line from ansible-docker/tasks/DebianTasks.yml
become: true

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-.vagrant/
-.settings/
-bin/
-.project
+# Eclipse
 .classpath
+.project
+.settings/
+
+# Vagrant
+.vagrant/
+
+# Ansible
+*.retry
+**/group_vars/all/secrets
+
+# Maven
+target/
