--- a/ansible/roles/ansible-python-pip/tasks/DebianTasks.yml
+++ b/ansible/roles/ansible-python-pip/tasks/DebianTasks.yml
@@ -1,6 +1,3 @@
 ---
 - name: Install python-pip
-  apt: pkg=python-pip state=present
-
-- name: Upgrade python-pip from default version
-  command: 'pip install --upgrade pip'
+  apt: pkg=python-pip state=latest
