--- a/docker/nifi/Dockerfile
+++ b/docker/nifi/Dockerfile
@@ -1,33 +1,33 @@
-FROM debian:wheezy
-
+FROM openjdk:8-jre-alpine
 MAINTAINER Uday Kabe <uday.kabe@exolyte.com>
 
-ENV DEBIAN_FRONTEND=noninteractive \
-    JAVA_HOME=/usr/lib/jvm/java-8-oracle
+ARG NIFI_VERSION=1.1.2
 
-# Install Java
-RUN     echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | tee /etc/apt/sources.list.d/webupd8team-java.list && \
-        echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main" | tee -a /etc/apt/sources.list.d/webupd8team-java.list && \
-        echo "oracle-java8-installer shared/accepted-oracle-license-v1-1 select true" | debconf-set-selections && \
-        apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys EEA14886 && \
-        apt-get update && \
-        apt-get install -y --force-yes --no-install-recommends ca-certificates oracle-java8-installer && \
-        apt-get clean all && \
-        rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
-        rm -rf /var/cache/oracle-jdk8-installer
+RUN NIFI_URL=http://www.gtlib.gatech.edu/pub/apache/nifi/$NIFI_VERSION/nifi-$NIFI_VERSION-bin.tar.gz \
+    wget -q $NIFI_URL && \
+    tar zxf nifi*.tar.gz && \
+    rm -f nifi*.tar.gz
 
-RUN apt-get update && \
-    apt-get install -y python-software-properties software-properties-common curl
+VOLUME ["/output", "/flowconf", "/flowrepo",  "/contentrepo", "/databaserepo", "/provenancerepo"]
 
-RUN \
-    curl -o /etc/apt/sources.list.d/hdf.list -L http://public-repo-1.hortonworks.com/HDF/debian7/2.x/updates/2.0.0.0/hdf.list && \
-#    curl -o /etc/apt/sources.list.d/hdf.list -L http://public-repo-1.hortonworks.com/HDF/ubuntu12/2.x/updates/2.0.0.0/hdf.list && \
-    apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 0xB9733A7A07513CAD && \
-    apt-get update && \
-    apt-get install -y nifi
+ENV NIFI_HOME=/nifi-$NIFI_VERSION
 
-EXPOSE 8080 8081
+#ENV JAVA_HOME=/usr/lib/jvm/java-1.8-openjdk/jre
 
-ENV TZ=America/Chicago
+# web port
+EXPOSE 8080
 
-CMD ["/usr/hdf/current/nifi/bin/nifi.sh", "run"]
+# listen port for web listening processor
+EXPOSE 8081
+
+# additional ports for user apps (bind them in a docker-compose.yml 'ports' section)
+EXPOSE 10000 10001 10002 10003 10004
+
+WORKDIR $NIFI_HOME/bin
+
+ADD ./entrypoint.sh .
+RUN chmod +x ./entrypoint.sh
+
+ENTRYPOINT ["./entrypoint.sh"]
+
+CMD ["./nifi.sh", "run"]
