--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,35 @@
 # Eclipse
+############
 .classpath
 .project
 .settings/
 
 # Vagrant
+############
 .vagrant/
 
 # Ansible
+############
 *.retry
 **/group_vars/all/secrets
 
 # Maven
+############
 target/
+
+# Package files
+#####################
+*.dmg
+*.iso
+*.jar
+*.rar
+*.tar
+
+# Logs
+######################
+*.log
+
+# Databases
+######################
+*.sql
+*.sqlite
