--- a/ansible/roles/ansible-fastai/vars/DebianVars.yml
+++ b/ansible/roles/ansible-fastai/vars/DebianVars.yml
@@ -1,1 +1,8 @@
 # Debian Vars
+---
+anaconda_parent_dir: '{{home_dir}}'
+
+anaconda_install_dir: '{{anaconda_parent_dir}}/{{anaconda_name}}'
+anaconda_link_dir: '{{anaconda_parent_dir}}/{{anaconda_link_subdir}}'
+
+anaconda_conda_bin: '{{anaconda_link_dir}}/bin/conda'
