--- a/ansible/roles/ansible-fastai/tasks/main.yml
+++ b/ansible/roles/ansible-fastai/tasks/main.yml
@@ -1,4 +1,14 @@
 ---
+- name: Set home directory variable when non-root user
+  set_fact:
+    home_dir: /home/{{aws_cli_user}}
+  when: aws_cli_user != "root"
+
+- name: Set home directory variable when root
+  set_fact:
+    home_dir: /root
+  when: aws_cli_user == "root"
+
 - include_vars: "{{ ansible_os_family }}Vars.yml"
 
 # docker installation tasks
