--- a/ansible/roles/ansible-oracle-java8/tasks/DebianTasks.yml
+++ b/ansible/roles/ansible-oracle-java8/tasks/DebianTasks.yml
@@ -7,4 +7,20 @@
 
 - name: Install Oracle Java 8 JDK
   apt: pkg=oracle-java8-installer state=present update_cache=yes
+  register: command_result
+  ignore_errors: yes
+
+# Temp hard-coded fix in case PPA is not up-to-date; need to parameterize this
+- name: Install Oracle Java 8 workaround if Previous Apt Install Failed
+  shell: |
+    sed -i 's|JAVA_VERSION=8u151|JAVA_VERSION=8u161|' oracle-java8-installer.*
+    sed -i 's|PARTNER_URL=http://download.oracle.com/otn-pub/java/jdk/8u151-b12/e758a0de34e24606bca991d704f6dcbf/|PARTNER_URL=http://download.oracle.com/otn-pub/java/jdk/8u161-b12/2f38c3b165be4555a1fa6e98c45e0808/|' oracle-java8-installer.*
+    sed -i 's|c78200ce409367b296ec39be4427f020e2c585470c4eed01021feada576f027f|6dbc56a0e3310b69e91bb64db63a485bd7b6a8083f08e48047276380a0e2021e|' oracle-java8-installer.*
+    sed -i 's|J_DIR=jdk1.8.0_151|J_DIR=jdk1.8.0_161|' oracle-java8-installer.*
+    apt-get install -y oracle-java8-installer
+  args:
+    chdir: /var/lib/dpkg/info/
+    executable: /bin/bash
+# command_result.rc won't exist if 'changed' is false in the previous task
+  when: command_result.rc is defined and command_result.rc != 0
   
