--- a/ansible/roles/ansible-docker-compose/tasks/main.yml
+++ b/ansible/roles/ansible-docker-compose/tasks/main.yml
@@ -3,3 +3,16 @@
 
 # docker-compose installation tasks
 - include: "{{ ansible_os_family }}Tasks.yml"
+
+- name: Install 'docker-compose'
+  command: 'pip install docker-compose'
+
+- name: Determine docker-compose version
+  shell: docker-compose --version | awk '{match($3,/[0-9]+\.[0-9]+\.[0-9]+/,a1); print a1[0]}'
+  register: compose_version
+
+- name: "Install bash completion for docker-compose version: {{compose_version.stdout}}"
+  get_url: 
+    url=https://raw.githubusercontent.com/docker/compose/{{compose_version.stdout}}/contrib/completion/bash/docker-compose
+    dest=/etc/bash_completion.d/docker-compose
+    mode=0644
