Added comments to elicit machine images

--- a/config/cluster.yml
+++ b/config/cluster.yml
@@ -9,6 +9,15 @@ machines:
   aws:
     count: 1
     region: "us-east-1"
+    # Ubuntu AMIs -- https://cloud-images.ubuntu.com/locator/ec2/
+    # us-east-1, zesty, 17.04, amd64, hvm:instance-store,  2017-12-08,  ami-97c5b0ed,  hvm
+    # us-east-1, xenial,  16.04 LTS, amd64, hvm:ebs-ssd, 2018-01-26,  ami-66506c1c,  hvm
+    # following ami not supported for r4.large, m5.large, r4.xlarge
+    # us-east-1 xenial  16.04 LTS amd64 hvm:instance-store  20180126  ami-c1477bbb  hvm
+    # us-east-1 trusty  14.04 LTS amd64 hvm:ebs 20180201  ami-4d202037  hvm
+    # us-east-1 trusty  14.04 LTS amd64 hvm:ebs-io1 20180201  ami-e8242492  hvm
+    # us-east-1 trusty  14.04 LTS amd64 hvm:ebs-ssd 20180201  ami-a22323d8  hvm
+    # us-east-1 trusty  14.04 LTS amd64 hvm:instance-store  20180201  ami-1b070761  hvm
     ami: "ami-f4cc1de2"
     user: "ubuntu"
     security_groups: "sg-xxxyyyzz"
