--- a/datacenter/social/docker-compose.yml
+++ b/datacenter/social/docker-compose.yml
@@ -2,19 +2,6 @@ version: "3"
 
 services:
 
-  mysql:
-    image: mysql/mysql-server:5.7
-    environment:
-      - MYSQL_DATABASE=exo
-      - MYSQL_USER=exo
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-changeme}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-changeme}
-    volumes:
-      - social_db:/var/lib/mysql
-    networks:
-      - back-tier
-    restart: on-failure:5
-
   social:
     image: teknologist/ubuntu-jdk7-exo-mysql
     depends_on:
@@ -22,9 +9,9 @@ services:
     expose:
       - "8080"
     environment:
-      - MYSQL_DATABASE=exo
-      - MYSQL_USER=exo
-      - MYSQL_PASSWORD=changeme
+      - MYSQL_DATABASE=${SOCIAL_DB_NAME:-exo}
+      - MYSQL_USER=${SOCIAL_DB_USER:-exo}
+      - MYSQL_PASSWORD=${SOCIAL_DB_PASS:-changeme}
 
       - VIRTUAL_HOST=${SOCIAL_HOST:-social.example.com}
       - VIRTUAL_NETWORK=back-tier
@@ -34,6 +21,20 @@ services:
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL:-first.last@example.com}
     volumes:
       - exodata:/srv/exo
+    networks:
+      - back-tier
+    restart: on-failure:5
+
+  mysql:
+    image: mysql:5.7
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-changeme}
+
+      - MYSQL_DATABASE=${SOCIAL_DB_NAME:-exo}
+      - MYSQL_USER=${SOCIAL_DB_USER:-exo}
+      - MYSQL_PASSWORD=${SOCIAL_DB_PASS:-changeme}
+    volumes:
+      - social_db:/var/lib/mysql
     networks:
       - back-tier
     restart: on-failure:5
