Updated to use Community image of Exo

--- a/datacenter/social/docker-compose.yml
+++ b/datacenter/social/docker-compose.yml
@@ -3,15 +3,19 @@ version: "3"
 services:
 
   social:
-    image: teknologist/ubuntu-jdk7-exo-mysql
+    image: exoplatform/exo-community:4.2
     depends_on:
       - mysql
-    expose:
-      - "8080"
     environment:
-      - MYSQL_DATABASE=${SOCIAL_DB_NAME:-exo}
-      - MYSQL_USER=${SOCIAL_DB_USER:-exo}
-      - MYSQL_PASSWORD=${SOCIAL_DB_PASS:-changeme}
+      - EXO_PROXY_VHOST=${SOCIAL_HOST:-social.example.com}
+      - EXO_PROXY_PORT=80
+      - EXO_PROXY_SSL="false"
+      - EXO_DB_TYPE=mysql
+      - EXO_DB_HOST=mysql
+      - EXO_DB_NAME=${SOCIAL_DB_NAME:-exo}
+      - EXO_DB_USER=${SOCIAL_DB_USER:-exo}
+      - EXO_DB_PASSWORD=${SOCIAL_DB_PASS:-changeme}
+      #- EXO_ADDONS_LIST=""
 
       - VIRTUAL_HOST=${SOCIAL_HOST:-social.example.com}
       - VIRTUAL_NETWORK=back-tier
@@ -21,6 +25,7 @@ services:
       - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL:-first.last@example.com}
     volumes:
       - exodata:/srv/exo
+      - exologs:/var/log/exo
     networks:
       - back-tier
     restart: on-failure:5
@@ -47,4 +52,6 @@ volumes:
   social_db:
     driver: local
   exodata:
+    driver: local
+  exologs:
     driver: local
