--- a/ansible/roles/ansible-fastai/tasks/DebianTasks.yml
+++ b/ansible/roles/ansible-fastai/tasks/DebianTasks.yml
@@ -29,7 +29,7 @@
   when: file.stat.exists == true and ansible_vagrant_mode is defined and ansible_vagrant_mode != "ansible_local"
 
 - name: Install list of packages
-  apt: name={{item}} state=installed
+  apt: name={{item}} state=present
   with_items:
        - tmux
        - build-essential
