--- a/datacenter/iaas/proxy/docker-compose.yml
+++ b/datacenter/iaas/proxy/docker-compose.yml
@@ -17,11 +17,11 @@ services:
       - "LDAP_BIND_DN=${LDAP_BIND_DN:-uid=admin,ou=system}"
       - "LDAP_BIND_DN_PASSWORD=${LDAP_BIND_DN_PASSWORD:-admin}"
     volumes:
-      - confd:/etc/nginx/conf.d
-      - vhostd:/etc/nginx/vhost.d
-      - content:/usr/share/nginx/html
-      - htpasswd:/etc/nginx/htpasswd:ro
       - certs:/etc/nginx/certs:ro
+      - confd:/etc/nginx/conf.d:ro
+      - content:/usr/share/nginx/html:ro
+      - htpasswd:/etc/nginx/htpasswd:ro
+      - vhostd:/etc/nginx/vhost.d:ro
     networks:
       - proxy-tier
       - back-tier
@@ -38,10 +38,10 @@ services:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - "../../../config/dockergen/nginx-compose-v2.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
       # needed volumes fron nginx container
-      - confd:/etc/nginx/conf.d:rw
-      - vhostd:/etc/nginx/vhost.d:rw
-      - htpasswd:/etc/nginx/htpasswd:ro
       - certs:/etc/nginx/certs:ro
+      - confd:/etc/nginx/conf.d:rw
+      - htpasswd:/etc/nginx/htpasswd:ro
+      - vhostd:/etc/nginx/vhost.d:ro
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
     restart: always
 
@@ -52,10 +52,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       # needed volumes fron nginx container
       - certs:/etc/nginx/certs:rw
-      - vhostd:/etc/nginx/vhost.d:rw
       - content:/usr/share/nginx/html:rw
+      - vhostd:/etc/nginx/vhost.d:rw
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=docker-gen
+      - NGINX_PROXY_CONTAINER=nginx
     restart: always
 
   idp:
@@ -79,9 +80,16 @@ networks:
   back-tier:
     external: true
 
+# Visit https://docs.docker.com/engine/reference/commandline/volume_create/
 volumes:
+  certs:
   confd:
-  vhostd:
   content:
   htpasswd:
-  certs:
+  vhostd:
+    driver: local
+    driver_opts:
+      type: none
+      device: ../../../config/nginx/vhost.d
+      o: bind
+  
