Comment out .project entry in .gitignore
This is needed by Oomph setup in order to recognize this project as an
Eclipse project.  Oomph's 'Projects Import' task does not recognize
Eclipse 'general' projects (i.e., those that do not have .project files).

This change is in preparation for adding a .project file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Eclipse
 ############
 .classpath
-.project
+# .project is needed by oomph to properly recognize an Eclipse project
+#.project
 .settings/
 
 # Vagrant
