Docker no longer allows relative paths in top level 'volumes' key
Upated device: key with a absolute local directory path

--- a/datacenter/iaas/proxy/docker-compose.yml
+++ b/datacenter/iaas/proxy/docker-compose.yml
@@ -90,6 +90,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: ../../../config/nginx/vhost.d
+      # Relative paths no longer allowed
+      device: ${PWD}/../../../config/nginx/vhost.d
       o: bind
   
